alteracao de cor

--- a/index.html
+++ b/index.html
@@ -10,17 +10,59 @@
 </head>
 
 <body>
+  <section>
+    <div class="containe">
+      <div class="cardd">
+        <input type="checkbox" id="card-1">
+        <label for="card-1"><h2>Ficou alguma <span>dúvida</span>?</h2></label>
+        <div class="card-content">
+          <div class="paragraph">
+            <p class="paragr">1 - O que acontece depois que eu assinar?</p>
+            <p class="graph">Fique de olho no seu e-mail! Você fará parte do time de UAUMigs e vai receber todas as informações sobre
+              a
+              produção da sua Box, além de ter acesso a conteúdos exclusivos, promoções de marcas parceiras e novidades
+              sobre o mundo da beleza.</p>
+          </div>
+          <div class="paragraph">
+            <p class="paragr">2 - Quais são os benefícios de ser uma UAUMig?</p>
+            <p class="graph">
+              Você vai receber, na sua casa, o dobro do valor da sua assinatura em produtos. Além disso, vai ter acesso
+              ao ManUAU com dicas de uso e de beleza; conteúdos exclusivos da UAUBox para você; acesso a promoções de
+              marcas parceiras e serviços.
+            </p>
+          </div>
+          <div class="paragraph">
+            <p class="paragr">3 - Quais são as formas de pagamento?</p>
+            <p class="graph">Você pode optar pelo pagamento com cartão de crédito, ou cartão pré-pago, facilmente recarregável através
+              de boleto.Saiba mais sobre o cartão pré-pago aqui.
+            </p>
+          </div>
+          <div class="paragraph">
+            <h3>
+              Se tem alguma dúvida específica, <a href="/">clique aqui para falar com a gente.</a>
+            </h3>
+          </div>
+          <a href="">
+            <button>
+              EU QUERO
+            </button>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <div class="">
 
     <form class="form">
       <p class="paragra">Receba conteúdo exclusivo</p>
       <div class="row_form">
-        <input type="text" placeholder="Seu nome">
-        <input type="text" placeholder="Seu e-mail">
+        <input class="seuNone" type="text" placeholder="Seu nome">
+        <input class="mail" type="text" placeholder="Seu e-mail">
         <button>ENVIAR</button>
       </div>
       <div class="p">
-        <p>Ao se cadastrar você está de acordo com nossa Política de privaciadade</p>
+        <p>Ao se cadastrar você está de acordo com nossa <a href="/">Política de privaciadade</a></p>
       </div>
     </form>
 
