--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -33,20 +37,22 @@
           </div>
           <div class="paragraph">
             <p class="paragr">3 - Quais são as formas de pagamento?</p>
-            <p class="graph">Você pode optar pelo pagamento com cartão de crédito, ou cartão pré-pago, facilmente recarregável através
-              de boleto.Saiba mais sobre o cartão pré-pago aqui.
+            <p class="graph">Você pode optar pelo pagamento com cartão de crédito ou cartão pré-pago, facilmente recarregável através
+              de boleto. <a href="/">Saiba mais sobre o cartão pré-pago aqui.</a>
             </p>
           </div>
           <div class="paragraph">
             <h3>
-              Se tem alguma dúvida específica, <a href="/">clique aqui para falar com a gente.</a>
+              Se tem alguma dúvida específica, <a href="https://atendimentouaubox.movidesk.com/kb">clique aqui para falar com a gente.</a>
             </h3>
           </div>
-          <a href="">
-            <button>
+          <div class="btn_container">
+          <a href="https://uaubox.com.br/" class="btn">
+            <button class="btn1">
               EU QUERO
             </button>
           </a>
+        </div>
         </div>
       </div>
     </div>
@@ -57,9 +63,9 @@
     <form class="form">
       <p class="paragra">Receba conteúdo exclusivo</p>
       <div class="row_form">
-        <input class="seuNone" type="text" placeholder="Seu nome">
-        <input class="mail" type="text" placeholder="Seu e-mail">
-        <button>ENVIAR</button>
+        <input id="name" class="seuNone" type="text" placeholder="Seu nome">
+        <input id="email" class="seuNone" type="text" placeholder="mail" type="text" placeholder="Seu e-mail">
+        <input class="seuNone" type="button"  onclick="saveExcel()" placeholder="enviar">
       </div>
       <div class="p">
         <p>Ao se cadastrar você está de acordo com nossa <a href="/">Política de privaciadade</a></p>
@@ -210,6 +216,7 @@
     </div>
   </footer>
 
+ <script src="./scrip.js"></script>
 </body>
 
 </html>
