--- a/index.html
+++ b/index.html
@@ -58,14 +58,16 @@
     </div>
   </section>
 
-  <div class="">
+  <div class="abc">
 
     <form class="form">
       <p class="paragra">Receba conteúdo exclusivo</p>
       <div class="row_form">
         <input id="name" class="seuNone" type="text" placeholder="Seu nome">
-        <input id="email" class="seuNone" type="text" placeholder="mail" type="text" placeholder="Seu e-mail">
-        <input class="seuNone" type="button"  onclick="saveExcel()" placeholder="enviar">
+        <input id="email" class="E-mail" type="text"  placeholder="Seu e-mail">
+        <button class="seuNone" type="submit"  onclick="saveExcel(event)">
+                enviar
+        </button>
       </div>
       <div class="p">
         <p>Ao se cadastrar você está de acordo com nossa <a href="/">Política de privaciadade</a></p>
